--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
