--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
