--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ DEV_MODE = "development"
 PORT = 5000
 MONGODB = mongodb://127.0.0.1:27017/JOB_PORTAL
 JWT_SECRET = W3nnm4rkr3c0p3l4c10nCut3
+MAIL_ID = "markus.dalton03282023@gmail.com"
+MAIL_PASS = "W3nnm4rk09125@"
