--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1"
   }
 }
