--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0"
   }
 }
