--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "slugify": "^1.6.6"
   }
 }
